ros2_ws/log/build_2026-06-05_00-42-46/avs_perception/stdout_stderr.log
-- Found ament_cmake: 1.3.14 (/opt/ros/humble/share/ament_cmake/cmake)
-- Override CMake install command with custom implementation using symlinks instead of copying resources
-- Found rclcpp: 16.0.19 (/opt/ros/humble/share/rclcpp/cmake)
-- Found rosidl_generator_c: 3.1.8 (/opt/ros/humble/share/rosidl_generator_c/cmake)
-- Found rosidl_adapter: 3.1.8 (/opt/ros/humble/share/rosidl_adapter/cmake)
-- Found rosidl_generator_cpp: 3.1.8 (/opt/ros/humble/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 6.1.2 (/opt/ros/humble/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 6.2.10 (/opt/ros/humble/share/rmw_fastrtps_cpp/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found sensor_msgs: 4.9.1 (/opt/ros/humble/share/sensor_msgs/cmake)
-- Found cv_bridge: 3.2.1 (/opt/ros/humble/share/cv_bridge/cmake)
-- Found image_transport: 3.1.12 (/opt/ros/humble/share/image_transport/cmake)
-- Found ncnn: 20260605
-- Configuring done
-- Generating done
-- Build files have been written to: /home/goln/SimpleSysIDV/ros2_ws/build/avs_perception
[ 16%] [32mBuilding CXX object CMakeFiles/yolo26_seg_lib.dir/src/yolo26_seg.cpp.o[0m
/home/goln/SimpleSysIDV/ros2_ws/src/avs_perception/src/yolo26_seg.cpp: In constructor ‘YOLO26Seg::YOLO26Seg()’:
/home/goln/SimpleSysIDV/ros2_ws/src/avs_perception/src/yolo26_seg.cpp:13:13: error: ‘class ncnn::Option’ has no member named ‘use_shader_pack8’
   13 |     net.opt.use_shader_pack8 = false;
      |             ^~~~~~~~~~~~~~~~
/home/goln/SimpleSysIDV/ros2_ws/src/avs_perception/src/yolo26_seg.cpp: In member function ‘int YOLO26Seg::detect(const cv::Mat&, std::vector<Object>&, float, float)’:
/home/goln/SimpleSysIDV/ros2_ws/src/avs_perception/src/yolo26_seg.cpp:45:8: error: ‘class ncnn::Extractor’ has no member named ‘set_num_threads’
   45 |     ex.set_num_threads(4);
      |        ^~~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/yolo26_seg_lib.dir/build.make:76: CMakeFiles/yolo26_seg_lib.dir/src/yolo26_seg.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:141: CMakeFiles/yolo26_seg_lib.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
